--- a/fsi_poc.ipynb
+++ b/fsi_poc.ipynb
@@ -944,7 +944,6 @@
     "class FormatCorrectionEvent(Event):\n",
     "    result: list\n",
     "\n",
-    "\n",
     "class SummarizationEvent(Event):\n",
     "    result: list\n",
     "\n",
@@ -993,7 +992,11 @@
     "        sections += re.findall(pattern, documents_proposal[0].text, re.DOTALL)\n",
     "        section4_5split = sections[4].split(\"V. Paperwork Reduction Act\")\n",
     "        sections[4]=section4_5split[0]\n",
-    "        sections.append(\"V. Paperwork Reduction Act\"+section4_5split[-1])\n",
+    "        sections = sections[:5]+[\"V. Paperwork Reduction Act\"+section4_5split[-1]]+sections[5:]\n",
+    "        for shead in [x.split('\\n')[0].strip() for x in sections]:\n",
+    "            print(shead)\n",
+    "\n",
+    "\n",
     "        documents_proposal = [Document(text=t, \n",
     "                                text_template='{metadata_str}\\n\\n{content}') for t in sections]\n",
     "\n",
@@ -1115,8 +1118,8 @@
     "            print(f\"   Summarizing section {i+1}/{ctx.data['num_sections']}...\")\n",
     "            parser = SentenceSplitter(chunk_size=500, chunk_overlap=20)\n",
     "            nodes = parser.get_nodes_from_documents(ctx.data[\"new_rule_documents\"], show_progress=True)\n",
-    "            response = await ctx.data[\"summarizer\"].get_response(prompt_summary+prompt_suffix, [doc.text for doc in nodes])\n",
-    "            section_summaries[i](response)\n",
+    "            response = ctx.data[\"summarizer\"].get_response(prompt_summary+prompt_suffix, [doc.text for doc in nodes])\n",
+    "            section_summaries[i] = response\n",
     "        \n",
     "        ctx.data[\"section_summaries\"] = section_summaries\n",
     "        return SummarizationNumericalValidationEvent(result=ev.result, summaries=section_summaries)\n",
@@ -1131,15 +1134,16 @@
     "            bads=0\n",
     "            numbers = re.findall(r'(?<!\\w)(\\d{1,3}(?:,\\d{3})*(?:\\.\\d+)?|\\d+\\.\\d+|\\d+)(?!\\w)', ev.summaries[i])\n",
     "            numbers = [x for x in numbers if len(x)>1]\n",
-    "            print(numbers)\n",
     "            for number in numbers:\n",
     "                if number not in sections[i]:\n",
     "                    bads+=1\n",
     "                    # print(f\"{number} not in section {i}!\")\n",
     "                else:\n",
     "                    goods+=1\n",
+    "        \n",
     "            # TODO: this is a manual param. put in ctx.data\n",
-    "            if bads>7: bad_summaries.append(i)\n",
+    "            if bads>7:\n",
+    "                bad_summaries.append(i)\n",
     "            print(f\"   Section {i} Goods: {goods}, Bads: {bads}\")\n",
     "\n",
     "        ctx.data[\"bad_summaries\"] = bad_summaries            \n",
@@ -1148,55 +1152,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "rule_flows.html\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "draw_all_possible_flows(RuleSummarizationFlow,filename=\"rule_flows.html\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Running step initialize\n",
-      "Step initialize produced event RegulationsExtractionEvent\n",
-      "Running step extract_regulations\n",
-      "Step extract_regulations produced event FormatCorrectionEvent\n",
-      "Running step correct_format\n",
-      "Step correct_format produced event SummarizationEvent\n",
-      "Running step summarize_sections\n",
-      "   Summarizing section 1/9...\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7fc42518c03048218df81ec8fd6df68d",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Parsing nodes:   0%|          | 0/9 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "c = RuleSummarizationFlow(timeout=12000, verbose=True)\n",
     "result = await c.run()"
@@ -1207,28 +1174,66 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "result"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "from fpdf import FPDF\n",
+    "\n",
+    "class PDF(FPDF):\n",
+    "    def header(self):\n",
+    "        self.set_font('Arial', 'B', 12)\n",
+    "        self.cell(0, 10, 'Summary of Sections', 0, 1, 'C')\n",
+    "\n",
+    "    def chapter_title(self, title):\n",
+    "        self.set_font('Arial', 'B', 14)\n",
+    "        self.cell(0, 10, title, 0, 1, 'L')\n",
+    "        self.ln(5)\n",
+    "\n",
+    "    def chapter_body(self, body):\n",
+    "        self.set_font('Arial', '', 12)\n",
+    "        self.multi_cell(0, 10, body)\n",
+    "        self.ln()\n",
+    "\n",
+    "def create_pdf(summaries, section_headers, output_filename):\n",
+    "    pdf = PDF()\n",
+    "\n",
+    "    pdf.add_page()\n",
+    "\n",
+    "    for header, summary in zip(section_headers, summaries):\n",
+    "        print(header)\n",
+    "        pdf.chapter_title(header.replace(\"’\", \"'\"))\n",
+    "        # try:\n",
+    "        pdf.chapter_body(summary.replace(\"“\", '\"').replace(\"”\", '\"').replace(\"’\", \"-\").replace(\"–\", \"-\").replace(\"—\", \"-\"))\n",
+    "        # except:\n",
+    "            # print(summary)\n",
+    "        # pdf.chapter_body(summary.)\n",
+    "        # pdf.chapter_body(summary)\n",
+    "        \n",
+    "\n",
+    "    pdf.output(output_filename)\n",
+    "\n",
+    "# Save the summaries to a PDF\n",
+    "output_filename = \"/workspace/data/summary_of_sections.pdf\"\n",
+    "# section_headers = [x.split('\\n')[0].strip() for x in sections]\n",
+    "section_headers = [\"Proposal Information\",\n",
+    "\"I. Background A. Statutory Provisions\",\n",
+    "\"II. Section -by-Section Analysis\",\n",
+    "\"III. Request for Comments\",\n",
+    "\"IV. Analysis of the Costs and Benefits Associated with the Proposed Rule\",\n",
+    "\"V. Paperwork Reduction Act\",\n",
+    "\"VI. Regulatory Flexibility Act\",\n",
+    "\"VII. Considerations of th e Impact on the Economy\",\n",
+    "\"IX. FinCEN’s Unfunded Mandates Reform Act Determination\"\n",
+    "]\n",
+    "create_pdf(result, section_headers, output_filename)"
+   ]
   },
   {
    "cell_type": "code",
