--- a/fsi_poc.ipynb
+++ b/fsi_poc.ipynb
@@ -47,6 +47,59 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# setting up llama.cpp 22m 32s\n",
+    "!cd /workspace/repos/ && git clone https://github.com/ggerganov/llama.cpp\n",
+    "!cd /workspace/repos/llama.cpp && git pull && make clean && LLAMA_CUDA=0 make\n",
+    "!chmod 755 /workspace/repos/llama.cpp/requirements.txt && pip3 install -r /workspace/repos/llama.cpp/requirements.txt "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "# from peft import PeftModel\n",
+    "from transformers import AutoModelForCausalLM, AutoTokenizer\n",
+    "\n",
+    "save_dir = \"/workspace/data/compliance/proposal_embedworking\"\n",
+    "\n",
+    "# tokenizer_name = \"dunzhang/stella_en_1.5B_v5\"\n",
+    "tokenizer_name = \"Qwen/Qwen2-1.5B\"\n",
+    "model_name = \"/workspace/data/compliance/rule_proposal_embedding_model_gpt\"\n",
+    "tokenizer = AutoTokenizer.from_pretrained(tokenizer_name)\n",
+    "model = AutoModelForCausalLM.from_pretrained(model_name,\n",
+    "                                             return_dict=True,\n",
+    "                                             torch_dtype=torch.float16,\n",
+    "                                             device_map=\"auto\",\n",
+    "                                             )\n",
+    "print('Saving model')\n",
+    "model.save_pretrained(save_dir)\n",
+    "print('Saving tokenizer')\n",
+    "tokenizer.save_pretrained(save_dir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!python3 /workspace/repos/llama.cpp/convert_hf_to_gguf.py /workspace/data/compliance/proposal_embed\n",
+    "!cd /workspace/data/compliance/proposal_embed && echo 'FROM \"/workspace/data/compliance/proposal_embed/Proposal_Embed-1.8B-F16.gguf\"' >> Modelfile && ollama create proposal_embed -f Modelfile\n",
+    "\n",
+    "    #FROM \"/workspace/data/compliance/proposal_embed/Proposal_Embed-1.8B-F16.gguf\"\n",
+    "# then run in terminal\n",
+    "    # ollama create proposal_embed -f Modelfile"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
@@ -117,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,14 +207,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os, re\n",
     "from llama_index.readers.file import PDFReader\n",
-    "from llamaindex_data_utils import extract_text_from_pdf\n",
+    "# from llamaindex_data_utils import extract_text_from_pdf\n",
     "from llama_index.core import Document\n",
+    "from utils import fix_hyphenated_words\n",
     "from dotenv import load_dotenv\n",
     "load_dotenv('/workspace/repos/agentic-ai/.env')\n",
     "\n",
@@ -171,39 +225,191 @@
     "parser = PDFReader(return_full_document=True)\n",
     "documents_proposal = parser.load_data(\"/workspace/data/compliance/FSI_Rule_proposal.pdf\")\n",
     "\n",
-    "page_number = 1\n",
-    "while True:\n",
-    "    # Create a regex pattern for the current page number\n",
-    "    pattern = rf'^{page_number}+ '\n",
-    "    # Substitute the pattern with an empty string\n",
-    "    new_text = re.sub(pattern, '', documents_proposal[0].text, flags=re.MULTILINE)\n",
-    "    # If no substitution was made, break the loop\n",
-    "    if new_text == documents_proposal[0].text:\n",
-    "        break\n",
-    "    # Update the text and increment the page number\n",
-    "    documents_proposal[0].text = new_text\n",
-    "    page_number += 1\n",
+    "# fixes poorly formatted hyphenated words\n",
+    "doc_text = documents_proposal[0].text\n",
+    "documents_proposal[0].text = fix_hyphenated_words(doc_text)\n",
     "\n",
-    "pattern = r'(?<=\\n)([IVX]+\\..*?)(?=\\n[IVX]+\\.\\s|\\Z)'\n",
-    "sections=[]\n",
-    "sections.append(\"Proposal Information\"+documents_proposal[0].text.split(\"I. Background A. Sta\")[0])\n",
-    "sections += re.findall(pattern, documents_proposal[0].text, re.DOTALL)\n",
-    "section4_5split = sections[4].split(\"V. Paperwork Reduction Act\")\n",
-    "sections[4]=section4_5split[0]\n",
-    "sections.append(\"V. Paperwork Reduction Act\"+section4_5split[-1])\n",
+    "step=10000\n",
+    "start=0\n",
+    "track=[]\n",
+    "for i in range(1, 18):  # Adjust the range as needed\n",
+    "    # Regular expression pattern to match the specific number preceded by \\n \\n or \\n\\n and followed by a space\n",
+    "    if i == 1:\n",
+    "        pattern = rf'(\\n \\n|\\n\\n| \\n)({i})( )'\n",
+    "    else:\n",
+    "        pattern = rf'(\\n \\n|\\n\\n)({i})( )'\n",
+    "    text_slice = doc_text[start:start+step]\n",
+    "    # Check if the pattern exists in the doc_text\n",
+    "    if re.search(pattern, text_slice):\n",
+    "        # Replace the matching patterns with an empty string\n",
+    "        matches = list(re.finditer(pattern, text_slice))\n",
+    "        # for mat in range(len(matches)):\n",
+    "        #     if start > matches[mat].span()[0]:\n",
+    "        #         continue\n",
+    "        #     else:\n",
+    "        #         break\n",
+    "        # if matches[mat].span()[0] < start:\n",
+    "        #     continue\n",
+    "        # else:\n",
+    "        print(f\"Found {i} {matches[0].span()}\")\n",
+    "        track.append(i)\n",
+    "        bingo=matches[0].span()\n",
+    "        text_slice = text_slice[:bingo[0]]+\"\\n\\n\"+text_slice[bingo[1]:]\n",
+    "        doc_text = doc_text[:start] + text_slice + doc_text[start+step:]\n",
+    "        start = bingo[1]\n",
+    "    else:\n",
+    "        start += step\n",
     "\n",
-    "# pdf_urls = [\"/workspace/data/compliance/FSI_Factsheet.pdf\", \"/workspace/data/compliance/FSI_Press_Release.pdf\", \"/workspace/data/compliance/FSI_Rule_proposal.pdf\"]\n",
-    "# descriptions = [\"Factsheet about newly proposed SEC rule.\", \"Press release regarding newly proposed SEC rule.\", \"The full text of the newly proposed SEC rule.\"]\n",
-    "# documents_proposal = extract_text_from_pdf(pdf_urls, llama_api_key, llamaparse_kwargs={\"split_by_page\":False}, save_json_path=None)\n",
-    "documents_proposal = [Document(text=t, \n",
-    "                          text_template='{metadata_str}\\n\\n{content}') for t in sections]\n",
+    "# documents_proposal[0].text = doc_text\n",
+    "# pattern = r'(?<=\\n)([IVX]+\\..*?)(?=\\n[IVX]+\\.\\s|\\Z)'\n",
+    "# sections=[]\n",
+    "# sections.append(\"Proposal Information\"+documents_proposal[0].text.split(\"I. Background A. Sta\")[0])\n",
+    "# sections += re.findall(pattern, documents_proposal[0].text, re.DOTALL)\n",
+    "# section4_5split = sections[4].split(\"V. Paperwork Reduction Act\")\n",
+    "# sections[4]=section4_5split[0]\n",
+    "# sections = sections[:5]+[\"V. Paperwork Reduction Act\"+section4_5split[-1]]+sections[5:]\n",
+    "# for shead in [x.split('\\n')[0].strip() for x in sections]:\n",
+    "#     print(shead)\n",
     "\n",
-    "# add metadata to the documents_proposal\n",
-    "for i in range(len(documents_proposal)):\n",
-    "    documents_proposal[i].metadata[\"section\"] = documents_proposal[i].text.split(\"\\n\")[0].strip()\n",
-    "    \n",
-    "# documents_proposal.extend(docs)"
+    "# # pdf_urls = [\"/workspace/data/compliance/FSI_Factsheet.pdf\", \"/workspace/data/compliance/FSI_Press_Release.pdf\", \"/workspace/data/compliance/FSI_Rule_proposal.pdf\"]\n",
+    "# # descriptions = [\"Factsheet about newly proposed SEC rule.\", \"Press release regarding newly proposed SEC rule.\", \"The full text of the newly proposed SEC rule.\"]\n",
+    "# # documents_proposal = extract_text_from_pdf(pdf_urls, llama_api_key, llamaparse_kwargs={\"split_by_page\":False}, save_json_path=None)\n",
+    "# documents_proposal = [Document(text=t, \n",
+    "#                           text_template='{metadata_str}\\n\\n{content}') for t in sections]\n",
+    "\n",
+    "# # add metadata to the documents_proposal\n",
+    "# for i in range(len(documents_proposal)):\n",
+    "#     documents_proposal[i].metadata[\"section\"] = documents_proposal[i].text.split(\"\\n\")[0].strip()\n",
+    "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(docs[0].text[19000:23000])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "parser = PDFReader(return_full_document=True)\n",
+    "docs = parser.load_data(\"/workspace/data/compliance/FSI_Rule_proposal.pdf\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re\n",
+    "test=\"\"\"Something here.\n",
+    "\n",
+    "5 ksjdkfjlksdjf\n",
+    "\n",
+    "4 financing of terrorism, and other illicit financ e activity, and to safeguard the national security of \n",
+    "the United States .1  The Secretary of the Treasury (“ the Secretary”) delegated the authority to \n",
+    "implement, administer, and enforce the BSA and its implementing regulations to the Director of \n",
+    "FinCEN .2 \n",
+    "person’s identity, including name, address, and other identifying information; and (C) consulting lists of known or suspected terrorists or terrorist organizations provided to the financial institution by any government agency to determine whether a person seeking to open an account appears on any such list.”\n",
+    "3 These programs are referred to as Customer Identification Program s \n",
+    " \n",
+    "1   See 31 U.S.C. 5311. Certain parts of the Currency and Foreign Transactions Reporting Act, as amended , \n",
+    "and other statutes relating to the subject matter of that Act, have come to be referred to as the BSA. The \n",
+    "BSA is codified at 12 U.S.C. 1829b, 12 U.S.C. 1951- 1960, and 31 U.S.C. 310, 5311- 5314, 5316- 5336, \n",
+    "including notes thereto, with implementing regulations at 31 CFR chapter X.  \n",
+    "2 See Treasury Order 180 –01, paragraph 3(a) (Jan. 14, 2020), available at https://home.treasury.gov/about/\n",
+    "general -information/orders -and-directives/treasury -order -180-01. \n",
+    "3 31 U.S.C. 5318(l)(2).  \n",
+    " \n",
+    "5 (“CIP s”) and are long-standing, foundational components of a financial institution’s  anti-money \n",
+    "laundering program.   \n",
+    "As enacted , section 326 applies to all “financial institutions .”  This term is  defined \n",
+    "broadly in the BSA to encompass a variety of entities, including commercial banks; agencies, \n",
+    "and branches of foreign banks in the United States ; thrift  institutions , credit unions, and private \n",
+    "banker s; trust companies; securities brokers and dealers registered with the Commission ; \n",
+    "investment companies; futures commission merchants ; insurance companies ; travel agencies ; \n",
+    "pawnbrokers; dealers in precious metals , stones, and jewels; check -cashers ; certain  casinos; and \n",
+    "telegraph companies, among others.4  The BSA also grants authority to the Secretary  to define, \n",
+    "by regulation, additional types of businesses as financial institutions where the Secretary  \n",
+    "determines that such businesses engage in any activity “similar to, related to, or a substitute for” those in which any of the businesses listed in the statutory definition are authorized to engage.\n",
+    "\n",
+    "As part of the implementation, administration , and enforcement of the BSA , this authority has \n",
+    "\"\"\"\n",
+    "test=docs[0].text\n",
+    "\n",
+    "\n",
+    "step=20000\n",
+    "start=0\n",
+    "for i in range(1, 7):  # Adjust the range as needed\n",
+    "    # Regular expression pattern to match the specific number preceded by \\n \\n or \\n\\n and followed by a space\n",
+    "    if i == 1:\n",
+    "        pattern = rf'(\\n \\n|\\n\\n| \\n)({i})( )'\n",
+    "    else:\n",
+    "        pattern = rf'(\\n \\n|\\n\\n)({i})( )'\n",
+    "    text_slice = test[start:start+step]\n",
+    "    # Check if the pattern exists in the test\n",
+    "    if re.search(pattern, text_slice):\n",
+    "        print(f\"Found {i}\")\n",
+    "        # Replace the matching patterns with an empty string\n",
+    "        matches = list(re.finditer(pattern, text_slice))\n",
+    "        # if len(matches) > 0:\n",
+    "        print(matches)\n",
+    "        bingo=matches[0].span()\n",
+    "        text_slice = text_slice[:bingo[0]]+\"\\n\\n\"+text_slice[bingo[1]:]\n",
+    "        test = test[:start] + text_slice + test[start+step:]\n",
+    "        start = bingo[1]\n",
+    "    else:\n",
+    "        start += step\n",
+    "\n",
+    "# print(test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 156,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pattern = rf'(\\n \\n|\\n\\n)({1})( )'\n",
+    "matches = list(re.finditer(pattern, test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test[:3000]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -534,13 +740,6 @@
    "source": [
     "## RAG"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
